--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-pandas
-numpy
-seaborn
-matplotlib
-scikit-learn
-catboost
-xgboost
-dill
-#-e .
+Flask==3.0.3
+gunicorn==21.2.0
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.4.2
+catboost==1.2.3
+xgboost==2.0.3
+dill==0.3.8
+seaborn==0.13.2
+matplotlib==3.8.4
+joblib==1.4.2
